--- a/assignemnt3/report3.tex
+++ b/assignemnt3/report3.tex
@@ -484,7 +484,7 @@ Table~\ref{tab:performance_comparison} presents detailed performance statistics 
 
 The comparative performance analysis (Figures~\ref{fig:comparison_best} and~\ref{fig:comparison_avg}) reveals a striking pattern: ACO consistently underperforms both baseline methods across all test instances, challenging the expectation that metaheuristics should outperform simple constructive approaches. Examining best-case performance (Figure~\ref{fig:comparison_best}), ACO produces 58-166\% more colors than the best-known solutions, while Tabu Search achieves only 21-46\% deviation. More concerning, ACO even trails the deterministic Greedy algorithm on some instances, suggesting fundamental algorithmic limitations rather than mere parameter tuning issues.
 
-The average performance over three runs (Figure~\ref{fig:comparison_avg}) exposes an additional scalability problem: the performance gap between ACO and Tabu Search widens dramatically as graph size increases. On dsjc250.5 (250 vertices), ACO uses approximately 56 colors versus TS's 35 colors—a 61\% increase. However, on dsjc1000.5 (1000 vertices), ACO requires 227 colors versus TS's 125 colors—an 82\% increase. This non-linear degradation indicates that ACO's population-based constructive approach struggles increasingly with larger problem instances, likely due to pheromone signal dilution across the expanding solution space. The consistency metrics further reveal that while ACO shows low standard deviation (indicating reproducible results), it reproducibly achieves poor solutions—consistency without quality provides little practical value.
+The average performance over three runs (Figure~\ref{fig:comparison_avg}) exposes an additional scalability problem: the performance gap between ACO and Tabu Search widens dramatically as graph size increases. On dsjc250.5 (250 vertices), ACO uses approximately 56 colors versus TS's 35 colors—a 61\% increase. However, on dsjc1000.5 (1000 vertices), ACO requires 227 colors versus TS's 125 colors—an 82\% increase. This non-linear degradation indicates that ACO's population-based constructive approach struggles increasingly with larger problem instances, likely due to pheromone signal fragmentation across the expanding solution space. The consistency metrics further reveal that while ACO shows low standard deviation (indicating reproducible results), it reproducibly achieves poor solutions—consistency without quality provides little practical value.
 
 The results reveal distinct performance profiles: Greedy achieves extremely fast execution (0.04-0.73 seconds) with 38-50\% deviation from BKS. Tabu Search demonstrates superior solution quality (21-46\% deviation) at high computational cost (926-10,026 seconds). ACO produces the poorest solutions (58-167\% deviation) despite comparable execution time to Tabu Search (1134-13,670 seconds), with performance degrading as graph size increases.
 
@@ -501,7 +501,7 @@ The results reveal distinct performance profiles: Greedy achieves extremely fast
 
 Despite using 82 parallel ants, ACO's execution time (Figure~\ref{fig:comparison_time}) is comparable to Tabu Search's sequential approach. This occurs because ACO runs fewer iterations (261) with expensive per-iteration operations (82 probabilistic constructions plus pheromone updates), while TS executes more iterations (7000 per color level) with cheaper deterministic move evaluations. The result is an unfavorable cost-benefit ratio: ACO consumes similar computational resources to TS while delivering inferior solution quality (2-3× more colors).
 
-ACO's underperformance stems from several factors: (1) constructive approach without initialization from feasible solutions, unlike TS which improves from Greedy starting points; (2) local construction decisions without global conflict visibility; (3) pheromone signal dilution across large color sets (50-200 colors). Graph characteristics analysis shows ACO's deviation increases with size (96\% → 166\% for 250-1000 vertices) while TS remains stable (21\% → 46\%), indicating scalability limitations.
+ACO's underperformance stems from several factors: (1) constructive approach without initialization from feasible solutions, unlike TS which improves from Greedy starting points; (2) local construction decisions without global conflict visibility; (3) pheromone signal fragmentation across large color sets (50-200 colors). Graph characteristics analysis shows ACO's deviation increases with size (96\% → 166\% for 250-1000 vertices) while TS remains stable (21\% → 46\%), indicating scalability limitations.
 
 The comparative analysis reveals distinct algorithmic trade-offs: Greedy excels when speed is critical (< 1 second, 38-50\% deviation), Tabu Search delivers superior quality when time permits (926-10,026 seconds, 21-46\% deviation), while ACO underperforms both approaches (1134-13,670 seconds, 58-167\% deviation). The results demonstrate that problem structure determines paradigm suitability \cite{cadenas_comparative_2023}—improvement-based methods benefit from feasible initialization, while constructive approaches must learn from scratch. The effectiveness of metaheuristics depends heavily on problem-specific heuristics rather than algorithmic category alone.
 
